[package]
name = "anyint"
version = "0.1.0"
authors = ["brecert <me@bree.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version= "1.0.24", optional = true }
displaydoc = "0.2.1"

[features]
default = ["std"]
std = ["thiserror"]