[package]
name = "anyint"
version = "0.1.0"
authors = ["brecert <me@bree.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.2.1"
thiserror = { version = "1.0.24", optional = true }
num-traits = { version = "0.2.14", optional = true }
anyint_macros = { version = "0.1.0", path = "../anyint_macros" }

[features]
default = ["std"]
std = ["thiserror"]
num = ["num-traits"]
