[package]
name = "anyint"
version = "0.1.0"
authors = ["brecert <me@bree.dev>"]
edition = "2021"
description = "provides traits and structs for working with integers of any bit size"
license = "MIT"
repository = "https://github.com/brecert/anyint"
homepage = "https://github.com/brecert/anyint"
keywords = ["integer", "number"]
categories = ["no-std", "rust-patterns"]
readme = "../README.md"

[dependencies]
displaydoc = { version = "0.2", optional = true, default-features = false }
thiserror = { version = "1.0", optional = true }
num-traits = { version = "0.2", optional = true }
anyint_macros = { version = "0.1", path = "../anyint_macros" }

[features]
default = ["std", "displaydoc"]
std = ["thiserror", "displaydoc?/std"]
num_traits = ["num-traits"]
