[package]
name = "anyint_macros"
version = "0.1.0"
authors = ["brecert <11599528+Brecert@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "anyint_macros"
proc-macro = true

[dependencies]
syn = "1.0.60"
quote = "1.0.9"
