[package]
name = "anyint_macros"
version = "0.1.0"
authors = ["brecert <me@bree.dev>"]
edition = "2021"
description = "provides traits and structs for working with integers of any bit size"
license = "MIT"
repository = "https://github.com/brecert/anyint"
homepage = "https://github.com/brecert/anyint"
readme = "../README.md"

[lib]
name = "anyint_macros"
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "1.0"
thiserror = "1.0"
